[Issue 28] Optimisation de la visualisation des test et detbfix

--- a/templates/task/_task_details.html.twig
+++ b/templates/task/_task_details.html.twig
@@ -32,6 +32,42 @@
                 </li>
             {% endfor %}
         </ul>
-        {% block buttons %}{% endblock %}
+        {% block buttons %}
+                <div class="text-center row justify-content-around">
+                {% if task.status != 'done' %}    
+                    <a class="col-5 btn px-2 border {{ getClassForStatus("doing")}}"
+                        href="{{ path('changeTaskStatus', {'id_project' : project.id, 'id_task' : task.id, 'status' : 'doing', 'id_sprint':task.sprint.id}) }}">
+                        En cours
+                    </a>
+                    {% if task.status == 'todo' %}
+                    <a class="col-5 btn px-2 border {{ getClassForStatus("done")}}"
+                        href="{{ path('changeTaskStatus', {'id_project' : project.id, 'id_task' : task.id, 'status' : 'done', 'id_sprint':task.sprint.id}) }}">
+                        Fait
+                    </a>
+                    {% endif %}
+                {% endif %}
+                </div>
+                <div class="text-center row justify-content-around" style="margin-top:5px;">
+                    <a class="btn btn-light my-auto mr-1" title="Editer" href="{{ path('editTask', {'id_project': project.id, 'id_sprint' : task.sprint.id, 'id_task' : task.id}) }}">
+                        <img src="{{ asset('build/images/edit.svg') }}" style="max-width: 30px;">
+                    </a>
+                    <button class="btn btn-light my-auto ml-1" title="Supprimer" data-toggle="modal" data-target="#task-delete-confirm">
+                        <img src="{{ asset('build/images/delete.svg') }}" style="max-width: 30px;">
+                    </button>
+                </div>
+        {% endblock %}
+        {% embed 'components/_modal.html.twig' with {'modalId': "task-delete-confirm"} %}
+            {% block header %}
+                <h3>Veuillez confirmer la suppression</h3>
+            {% endblock %}
+            {% block body %}
+                <p>Êtes-vous sûr(e) de vouloir supprimer la tâche {{ task.number }}</p>
+            {% endblock %}
+            {% block footer %}
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Non</button>
+                <button type="button" data-dismiss="modal" data-link="{{ path('deleteTask', {'id_project' : project.id,'id_sprint' : task.sprint.id, 'id_task' : task.id}) }}" data-id="{{ task.id }}" 
+                class="btn btn-primary delete-item">Oui</button>
+            {% endblock %}
+        {% endembed %}
     </div>
 </li>
