--- a/templates/issue/issue_details.html.twig
+++ b/templates/issue/issue_details.html.twig
@@ -27,12 +27,12 @@ de l'issue - {{ issue.number }}{% endblock %}
                             <span>| Statut :</span>
                             <span class="font-weight-bold {{ getClassForStatus(issue.status)}} badge" style="font-size: 110%;">
                             {% if issue.status  == "doing" %}
-                                {{ issue.getProportionOfDoing() }}
+                                {{ issue.getProportionOfDoing() * 100 }}%
                             {% endif %}
                             {{ issue.status |capitalize }}
                             </span>
                             {% if issue.status  == "doing" %}
-                            <span class="font-weight-bold {{ getClassForStatus("done")}} badge" style="font-size: 110%;">{{ issue.getProportionOfDone() }} Done
+                            <span class="font-weight-bold {{ getClassForStatus("done")}} badge" style="font-size: 110%;">{{ issue.getProportionOfDone() * 100 }}% Done
                             </span>
                             {% endif %}
                             {% for sprint in issue.getSprints() %}
@@ -67,7 +67,7 @@ de l'issue - {{ issue.number }}{% endblock %}
                     {% endblock %}
                     {% block footer %}
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Non</button>
-                        <button type="button" data-dismiss="modal" data-link="{{ path('deleteIssue', {'id_project' : project.id,'id_issue' : issue.id }) }}" data-id="{{ issue.id }}" 
+                        <button type="button" data-dismiss="modal" data-link="{{ path('deleteIssue', {'id_project' : project.id,'id_issue' : issue.id }) }}" data-id="{{ issue.id }}"
                                 class="btn btn-primary delete-item">Oui</button>
                     {% endblock %}
                 {% endembed %}
@@ -83,7 +83,7 @@ de l'issue - {{ issue.number }}{% endblock %}
 {% endblock %}
 
 {% block javascripts %}
-    
+
     {% if faileds is defined and succeededs is defined %}
         {{ encore_entry_script_tags('testList') }}
     {% endif %}
