--- a/templates/issue/issue_list.html.twig
+++ b/templates/issue/issue_list.html.twig
@@ -28,12 +28,12 @@
                                             <span>| Statut :</span>
                                             <span class="font-weight-bold {{ getClassForStatus(issue.status)}} badge" style="font-size: 110%;">
                                             {% if issue.status  == "doing" %}
-                                                {{ issue.getProportionOfDoing() }}
+                                                {{ issue.getProportionOfDoing() * 100 }}%
                                             {% endif %}
                                             {{ issue.status |capitalize }}
                                             </span>
                                             {% if issue.status  == "doing" %}
-                                            <span class="font-weight-bold {{ getClassForStatus("done")}} badge" style="font-size: 110%;">{{ issue.getProportionOfDone() }} Done
+                                            <span class="font-weight-bold {{ getClassForStatus("done")}} badge" style="font-size: 110%;">{{ issue.getProportionOfDone() * 100 }}% Done
                                             </span>
                                             {% endif %}
                                             {% for sprint in issue.getSprints() %}
@@ -69,7 +69,7 @@
                                 {% endblock %}
                                 {% block footer %}
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Non</button>
-                                    <button type="button" data-dismiss="modal" data-link="{{ path('deleteIssue', {'id_project' : project.id,'id_issue' : issue.id }) }}" data-id="{{ issue.id }}" 
+                                    <button type="button" data-dismiss="modal" data-link="{{ path('deleteIssue', {'id_project' : project.id,'id_issue' : issue.id }) }}" data-id="{{ issue.id }}"
                                             class="btn btn-primary delete-item">Oui</button>
                                 {% endblock %}
                             {% endembed %}
