--- a/templates/sprint/sprint_details.html.twig
+++ b/templates/sprint/sprint_details.html.twig
@@ -15,10 +15,10 @@
                 </p>
                 <div class="text-muted small">
                     <span>Période ({{sprint.durationInDays}}j) :</span>
-                    <span class="font-weight-bold">{{ sprint.startDate.format("d/m/Y") }} - {{ sprint.getEndDate("d/m/Y") }}</span>
+                    <span class="font-weight-bold">{{ sprint.startDate|date("d/m/Y") }} - {{ sprint.endDate|date("d/m/Y") }}</span>
                     <span> | Issues : {{ sprint.getIssues()|length }}</span>
                     <span> | Tâches : {{ sprint.getTasks()|length }}</span>
-                    {% if sprint.isFinish() %}
+                    {% if sprint.isFinished() %}
                         <span> | </span>
                         <span class="font-weight-bold green badge" style="font-size: 110%;">Fini</span>
                     {% else %}
